k8s-service.yml
# En este archivo se encuentra la configuración del despliegue de la aplicación
# utilizando Kubernetes (K8s es su acronimo, lo vamos a usar para referirnos asi mas adelante).
# En cada punto especificaremos los elementos respectivos.

# Version del API de Kubernetes
apiVersion: apps/v1
# Tipo de elemento
kind: Deployment
# Metadatos del elemento
metadata:
  # Nombre
  name: calculadora-numeros
  # Etiqueta del Deployment
  labels:
    app: calculadora-numeros
# Especificaciones del elemento
spec:
  replicas: 1
  # K8s agrupa los elementos del Deployment y los interconecta entre si utilizando etiquetas
  # Aqui definimos como seleccionar los elementos juntos
  selector:
    # En este caso va a seleccionar aquellos que coincidan con el nombre del deploy
    matchLabels:
      app: calculadora-numeros
  # En este elemento definimos la politica de actualizacion del despliegue
  # No esta al alcance de este laboratorio, pero invitamos al lector a consultar mas sobre
  # tecnicas de actualización de despliegues como Rolling Update y Blue/Green
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate        
  # En esta sección definimos el contenido del pod y declaramos los contenedores
  template:
    metadata:
      labels:
        # Esta es la etiqueta que se le asigna al pod, debe ser igual al selector (linea 24)
        app: calculadora-numeros
    spec:
      # Declaracion de contenedores
      # name: Nombre del contenedor
      # image: Nombre de la imagen, por defecto buscara en Docker Hub o en el repositorio privado
      #        configurado en K8s
      containers:
        - name: calculadora-numeros
          image: us-central1-docker.pkg.dev/calculadora-cloud-native-2022/uniandes-misw-native-calculadora-app/calculadora-numeros:db-save-1.0
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets

# Vamos a especificar el balanceador de carga en este mismo archivo
# para ello vamos a crear otro documento separado, esto se hace con el operador "---"
---
kind: Service
apiVersion: v1
metadata:
  name: calculadora-numeros
spec:
  type: LoadBalancer
  selector:
    app: calculadora-numeros
  # Declaracion y redireccion del trafico por los puertos
  # En este caso, estamos ocupando el puerto 80 para la conexión HTTP
  # y lo estamos redirigiendo al 3000 de la red virtual del pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
