k8s-deployments.yml
#SUMA
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculadora-numeros-suma
  labels:
    app: calculadora-numeros-suma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculadora-numeros-suma
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: calculadora-numeros-suma
    spec:
      containers:
        - name: calculadora-numeros-suma
          image: us-central1-docker.pkg.dev/calculadora-cloud-native-2022/uniandes-misw-native-calculadora-app/calculadora-numeros:sum_v0.0.1
          ports:
            - containerPort: 4000
          imagePullPolicy: Always
      volumes:
        - name: appsecrets-volume
          secret:
            secretName: appsecrets
     
---
kind: Service
apiVersion: v1
metadata:
  name: calculadora-numeros-suma
  annotations:
    cloud.google.com/backend-config: '{"default": "calculadora-numeros-suma-config"}'
spec:
  type: NodePort
  selector:
    app: calculadora-numeros-suma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31019
---
#MULTIPLICACION
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculadora-numeros-multiplicacion
  labels:
    app: calculadora-numeros-multiplicacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculadora-numeros-multiplicacion
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: calculadora-numeros-multiplicacion
    spec:
      containers:
        - name: calculadora-numeros-multiplicacion
          image: us-central1-docker.pkg.dev/calculadora-cloud-native-2022/uniandes-misw-native-calculadora-app/calculadora-numeros:mult_v0.0.1
          ports:
            - containerPort: 4000
         
          imagePullPolicy: Always
      volumes:
          - name: appsecrets-volume
            secret:
              secretName: appsecrets
---
kind: Service
apiVersion: v1
metadata:
  name: calculadora-numeros-multiplicacion
  annotations:
    cloud.google.com/backend-config: '{"default": "calculadora-numeros-multiplicacion-config"}'
spec:
  type: NodePort
  selector:
    app: calculadora-numeros-multiplicacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31017

# INGRESS
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /suma
        backend:
          service:
            name: calculadora-numeros-suma
            port: 
              number: 80
      - pathType: Prefix
        path: /multiplicar
        backend:
          service:
            name: calculadora-numeros-multiplicacion
            port: 
              number: 80
